# seguid_calculator

./: .gitignore  .pkgr.yml  .travis.yml  .travis_build_for _windows_using _wine.yml  .travis_build_for_mac_on_travis.yml  MANIFEST  MANIFEST.in  README.md  README.rst  __init__.spec  appveyor.yml  appveyor.yml_  build_exe_with_pyinstaller.sh  build_exe_with_pyinstaller_on_wine.sh  build_with_pyinstaller.sh  ci.sh  ci.sh_  ci.sh__  ci_lin.sh  ci_osx.sh  ci_win.sh  create_deb.sh  deb_description.txt  deploy_to_dropbox.py  meta.yaml  pyproject.toml  pyproject.toml__  requirements.txt  run.sh  run_test.py  seguid.spec  seguid_build_environment.yml  seguid_calculator.desktop  seguid_calculator.key  seguid_calculator.py  seguid_calculator.spec  seguid_calculator.spec_  seguid_calculator.spec__  seguid_calculator2.spec  seguid_calculator_build_environment.yml  (+8 more)
Implementations/: Python.py  seguids.py  tests.py
deb_dist/: python-seguid-calculator_0.9.0-1_all.deb  python-seguid-calculator_1.0.0-1_all.deb  seguid-calculator_0.9.0-1.debian.tar.xz  seguid-calculator_0.9.0-1.dsc  seguid-calculator_0.9.0-1_amd64.build  seguid-calculator_0.9.0-1_amd64.changes  seguid-calculator_0.9.0-1_source.changes  seguid-calculator_1.0.0-1.debian.tar.xz  seguid-calculator_1.0.0-1.dsc  seguid-calculator_1.0.0-1_amd64.build  seguid-calculator_1.0.0-1_amd64.changes  seguid-calculator_1.0.0-1_source.changes
old/: pyinstaller.yml  pyinstaller_env.yml  pypi_env.yml  requirements.txt  setup.py
old files/: .travis (3rd copy).yml
scripts/: SEGUID_calculator.desktop  SEGUID_calculator_jython.py  (+5 more)
(+108 files in other folders)
