[tool.poetry]
name = "seguid_calculator"
version = "2.0.0"
description = "GUI for calculating seguid checksums for biological sequences."
authors = ["BjornFJohansson <bjornjobb@gmail.com>"]
license = "BSD"
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.9,<3.12"
seguid = "=0.0.4"
flask = ">=3.0.2"
flaskwebgui = ">=1.0.9"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
